--- a/src/Assets/index.css
+++ b/src/Assets/index.css
@@ -4,6 +4,10 @@ body {
     min-width: 400px;
 }
   
+/*
+    NavBar
+*/
+
 #menu {
     z-index: 2;
 }
@@ -31,14 +35,14 @@ body {
 #bar3 {
     transform: translateY(4px);
 }
-
+  
 .nav {
     transition: 0.3s ease;
     display: none;
 }
 
 .nav ul {
-    padding: 0 22px;
+    padding: 0 10px;
 }
 
 .nav li {
@@ -98,8 +102,6 @@ body {
     transform: translate(-60%,-30%);
 }
 
-
-
 .NavBar{
     display: flex;
     width: 100%;
@@ -141,8 +143,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    
-
 }
 
 .Logo-Txt{
@@ -154,3 +154,158 @@ body {
     font-weight: 700;
     letter-spacing: 0.45em;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*
+    
+*/
+
+#Presentation{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+}
+
+.Presentation img{
+    margin-right: 2em;
+    width: 40%;
+    min-width: 20%;
+}
+
+.Slogan{
+    font-family: 'Fredoka';
+    font-size: 4em;
+    display: inline-block;
+    text-align: center;
+    color: #323232;
+}
+
+.Slogan .Food{
+    color: #F54748;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#Services{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+}
+
+.Ofrecer{
+    font-size: 1.5em;
+    display: inline-block;
+    text-align: center;
+    margin: 0.5em 0 0.5em 0;
+    color: #F54748;
+}
+
+.Land1{
+    font-family: 'Fredoka';
+    font-size: 3em;
+    display: inline-block;
+    text-align: center;
+    margin: 0em 0 0.5em 0;
+    color: #323232;
+}
+
+#Services ul{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    list-style: none;
+    padding: 0;
+} 
+
+#Services li{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    margin: 0 1em 0 1em;
+}
+
+.Easy{
+    width: 20%;
+    min-width: 10%;
+}
+.Delivery{
+    width: 40%;
+    min-width: 20%;
+}
+.Quality{
+    width: 35%;
+    min-width: 15%;
+}
+
+#Services li h2{
+    font-family: 'Fredoka';
+    color: #323232;
+    font-size: 2em;
+    display: inline-block;
+    text-align: center;
+    margin: 0.5em 0 0 0;
+}
+
+#Services li p{
+    color: #323232;
+    font-size: 1.5em;
+    display: inline-block;
+    text-align: center;
+    margin: 0.5em 0 0.5em 0;
+    font-weight: 400;
+}
+
+
+
+
+
+@media screen and (max-width: 768px){
+    #Presentation{
+        flex-direction: column;
+    }
+    #Presentation img{
+        display: none;
+    }
+    .Slogan{
+        font-size: 5em;
+    }
+}
+
+
+
