--- a/src/Assets/index.css
+++ b/src/Assets/index.css
@@ -289,11 +289,90 @@ body {
     text-align: center;
     margin: 0.5em 0 0.5em 0;
     font-weight: 400;
+    font-style: italic;
+    font-weight: 400;
 }
 
 
 
 
+
+
+
+
+
+
+
+
+
+
+#Menu{
+    width: 100%;
+    height: 100%;
+}
+
+.Our-Menu{
+    font-size: 1.5em;
+    margin: 0.5em 0 0.5em 2em;
+    color: #F54748;
+}
+
+.Land2{
+    font-family: 'Fredoka';
+    font-size: 3em;
+    margin: 0 0 0.5em 1em;
+    color: #323232;
+}
+
+
+.Carrusel{
+    width: 60%;
+    display: flex;
+    max-height: 40%;
+    position: relative;
+    left: 3%;
+    overflow: hidden;
+    border-radius: 10px;
+    margin: 1em;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.carousel-item img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.Menu-side{
+    width: 30%;
+    position: absolute;
+    right: 2em;
+    top: 94.5em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.Menu-side li{
+    font-family: 'Fredoka';
+    color: #323232;
+    font-size: 1.5em;
+    display: inline-block;
+    text-align: center;
+    margin: 0.5em 0 0 0;
+    background-color: #ffffff;
+    width: 100%;
+    border-radius: 10px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.Menu-side li b{
+    font-family: 'Fredoka';
+    color: #F54748;
+    font-size: 1.5em;
+}
 
 @media screen and (max-width: 768px){
     #Presentation{
