--- a/src/Assets/index.css
+++ b/src/Assets/index.css
@@ -309,6 +309,7 @@ body {
 #Menu{
     width: 100%;
     height: 100%;
+    margin-bottom: 5em;
 }
 
 .Our-Menu{
@@ -355,7 +356,7 @@ body {
     align-items: center;
 }
 
-.Menu-side li{
+.Menu-item{
     font-family: 'Fredoka';
     color: #323232;
     font-size: 1.5em;
@@ -374,6 +375,40 @@ body {
     font-size: 1.5em;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+#Postres{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.card{
+    width: 30%;
+    height: 100%;
+    margin: 1em;
+    border-radius: 10px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+
+
+
+
 @media screen and (max-width: 768px){
     #Presentation{
         flex-direction: column;
@@ -384,6 +419,18 @@ body {
     .Slogan{
         font-size: 5em;
     }
+    .Menu-side{
+        width: 100%;
+        position: relative;
+        top: 0;
+    }
+    .Menu-side li{
+        margin: 0.5em 0 0.5em 0;
+    }
+    .Carrusel{
+        width: 95%;
+        left: 0;
+    }   
 }
 
 
