--- a/src/Assets/index.css
+++ b/src/Assets/index.css
@@ -310,6 +310,11 @@ body {
     width: 100%;
     height: 100%;
     margin-bottom: 5em;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .Our-Menu{
@@ -327,11 +332,11 @@ body {
 
 
 .Carrusel{
-    width: 60%;
+    width: 50%;
     display: flex;
     max-height: 40%;
-    position: relative;
-    left: 3%;
+    justify-content: center;
+    align-items: center;
     overflow: hidden;
     border-radius: 10px;
     margin: 1em;
@@ -347,9 +352,9 @@ body {
 
 .Menu-side{
     width: 30%;
-    position: absolute;
+    position: relative;
     right: 2em;
-    top: 94.5em;
+    top: 1.5em;
     display: flex;
     flex-direction: column;
     justify-content: center;
